--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ecasilla/Coder-Byte-JS",
   "devDependencies": {
+    "browserify": "^5.8.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.4",
     "grunt-concurrent": "^0.5.0",
@@ -30,6 +31,7 @@
     "grunt-newer": "^0.7.0",
     "jshint-stylish": "^0.4.0",
     "mocha": "^1.21.0",
+    "remapify": "^0.1.6",
     "testem": "^0.6.17",
     "underscore": "^1.6.0"
   }
