--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ecasilla/Coder-Byte-JS",
   "devDependencies": {
+    "chai": "^1.9.2",
     "grunt": "^0.4.5",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
